@@ -1,3 +1,10 @@
+2014-06-13  Mark Wielaard  <mjw@redhat.com>
+
+	* backtrace-subr.sh (check_native_unsupported): New function.
+	(check_native): Call it.
+	(check_native_core): Likewise.
+	* run-backtrace-dwarf.sh: Likewise.
+
 2014-06-11  Mark Wielaard  <mjw@redhat.com>
 
 	* backtrace.c (main): Check that Dwfl was attached by calling
